project/base/todo-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: project-svc
spec:
  type: NodePort
  selector:
    app: project
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 8080
